# tap-anvil

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  meltano.yml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump.yml  ci_workflow.yml  codeql-analysis.yml  scan.yml  test.yml
output/: .gitignore  target-jsonl-config.json
queries/: organizations.graphql  submissions.graphql  welds.graphql
schemas/: forges.json
tap_anvil/: __init__.py  client.py  streams.py  tap.py
tap_anvil/queries/: .graphqlconfig  forges.graphql  schema.graphql  weldDatas.graphql  welds.graphql
tap_anvil/schemas/: organizations.json  submissions.json  weldDatas.json  welds.json
tap_anvil/tests/: __init__.py  test_core.py
tests/: test_tap.py
