[tool.poetry]
name = "tap-anvil"
version = "0.0.1"
description = "`tap-anvil` is a Singer tap for anvil, built with the Meltano SDK for Singer Taps."
authors = ["Kshitij Aranke"]
keywords = [
    "ELT",
    "anvil",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25"
singer-sdk = "^0.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
mypy = "^0.971"
types-requests = "^2.26"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-anvil = 'tap_anvil.tap:TapAnvil.cli'
