[tool.poetry]
name = "tap-anvil"
version = "0.1.5"
description = "A Singer tap for Anvil, a tool for programmatically filling out PDF forms."
authors = ["Kshitij Aranke <kshitij@aranke.org>"]
keywords = ["singer", "tap", "anvil"]
license = "MIT"
homepage = "https://github.com/k-aranke/tap-anvil"
repository = "https://github.com/k-aranke/tap-anvil"
include = ["queries", "schemas"]

[tool.poetry.urls]
Changelog = "https://github.com/k-aranke/tap-anvil/releases"


[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
singer-sdk = "^0.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^3.0.0"
python-dotenv = "^0.20"
mypy = "^0.982"
types-requests = "^2.28.9"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.5"
version_files = ["pyproject.toml:version"]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-anvil = 'tap_anvil.tap:TapAnvil.cli'
